Fixed wrapping logic Tech-section padding added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2106,7 +2106,7 @@ ul.actions li:first-child {
 .wrapper {
 	background-image: url("images/bg.png");
 	box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.05), inset 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
-	padding: 2em 0 2em 0;
+	padding: 4em 0 4em 0;
 	text-align: center;
 }
 
@@ -2577,15 +2577,15 @@ body>article {
 
 }
 
-#nav.ul {
-	width: 50% !important;
-	display: inline-block;
+#nav ul {
+	height: 100%;
+	overflow: hidden;
 }
 
 #nav>ul.container {
 	float: left;
 	width: 80% !important;
-	text-align: left;
+	text-align: left;	
 }
 
 #nav>ul.links {
@@ -2598,6 +2598,7 @@ body>article {
 	font-size: 14px;
 	height: 250px;
 	overflow: auto;
+	text-align: left;
 }
 
 .company-logo {
@@ -2625,7 +2626,7 @@ body>article {
 }
 
 .tech-section{
-	padding: 5px;
+	padding: 20px 5px 5px 5px;
 }
 
 .tech-section p{
